--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap");
+
+body {
+  font-family: "Public Sans", sans-serif;
+  font-size: 18px;
+}
+:root {
+  --darkBlue: hsl(233, 26%, 24%);
+  --limeGreen: hsl(136, 65%, 51%);
+  --brightCyan: hsl(192, 70%, 51%);
+  --grayishBlue: hsl(233, 8%, 62%);
+  --lightGrayishBlue: hsl(220, 16%, 96%);
+  --veryLightGray: hsl(0, 0%, 98%);
+  --white: hsl(0, 0%, 100%);
+}
+button {
+  cursor: pointer;
+  user-select: none;
+  outline: none;
+  transition: 0.3s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.parent {
+  /* margin-left: 50px; */
+  margin-left: 5rem;
+}
+.header {
+  color: var(--darkBlue);
+}
+.biggest {
+  font-size: 3.5rem;
+}
+.big {
+  font-size: 2rem;
+}
+.normalText {
+  color: var(--grayishBlue);
+  font-size: 1.1rem;
+  margin-top: 2vh;
+  line-height: 1.5rem;
+}
+.text {
+  color: var(--grayishBlue);
+  font-size: 1.1rem;
+  margin-top: 2vh;
+  line-height: 1.5rem;
+}
+.text.normal {
+  font-size: 1.1rem;
+  /* margin-top: 2vh; */
+  /* line-height: 1.5rem; */
+}
+.text.small {
+  font-size: 1rem;
+}
+.intro {
+  /* position: absolute; */
+  /* width: 50vw; */
+  width: calc(50vw - 15vw);
+  /* margin-left: 5rem; */
+  /* margin-top: 15rem; */
+  margin-bottom: auto;
+  margin-top: auto;
+  /* margin-bottom: 15rem; */
+}
+.intro.background {
+  width: 50vw;
+  margin-left: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  /* background-image: url("./images/bg-intro-desktop.svg"); */
+}
+.intro.background.image {
+  /* width: 100vw; */
+  width: fit-content;
+  /* transform: translate(30%, -20%); */
+  position: absolute;
+  object-fit: cover;
+  height: 65vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.filled {
+  background: linear-gradient(90deg, var(--limeGreen), var(--brightCyan));
+  padding: 0.8rem 2rem;
+  border: 0px solid;
+  border-radius: 999px;
+  font-weight: 700;
+  color: var(--lightGrayishBlue);
+  /* opacity: 1; */
+}
+.filled:hover {
+  box-shadow: inset 0 0 0px 990px rgba(255, 255, 255, 0.5);
+  opacity: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.intro.background.mockup {
+  /* width: ; */
+  /* position: absolute; */
+  /* transform: translate(20%, -75%); */
+  width: 100%;
+  position: relative;
+  right: -8vw;
+  top: -7vh;
+}
+.flexbox {
+  /* overflow-x: hidden;
+  overflow-y: visible; */
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+.attribution {
+  display: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reason.list {
 }
