--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,12 @@ button {
   outline: none;
   transition: 0.3s;
 }
-
+a {
+  cursor: pointer;
+}
 .parent {
   /* margin-left: 50px; */
-  margin-left: 5rem;
+  /* margin-left: 5rem; */
 }
 .header {
   color: var(--darkBlue);
@@ -30,28 +32,38 @@ button {
 .biggest {
   font-size: 3.5rem;
 }
+.medium {
+  font-size: 1.2rem;
+}
 .big {
   font-size: 2rem;
 }
-.normalText {
+.verysmall {
+  font-size: 0.7rem;
+}
+/* .normalText {
   color: var(--grayishBlue);
   font-size: 1.1rem;
   margin-top: 2vh;
   line-height: 1.5rem;
-}
+} */
 .text {
   color: var(--grayishBlue);
-  font-size: 1.1rem;
+  /* font-size: 1.1rem; */
   margin-top: 2vh;
   line-height: 1.5rem;
 }
-.text.normal {
+.normal {
   font-size: 1.1rem;
   /* margin-top: 2vh; */
   /* line-height: 1.5rem; */
 }
-.text.small {
+.small {
   font-size: 1rem;
+}
+.smaller {
+  font-size: 0.8rem;
+  line-height: 1.2rem;
 }
 .intro {
   /* position: absolute; */
@@ -109,9 +121,122 @@ button {
   overflow: hidden;
   display: flex;
   height: 100%;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  /* justify-content: space-around; */
 }
 .attribution {
-  display: none;
+  /* display: none; */
+  background: var(--darkBlue);
+  color: var(--veryLightGray);
 }
-.reason.list {
+.attribution > a {
+  color: var(--grayishBlue);
+}
+.flexbox.reasons {
+  background: var(--lightGrayishBlue);
+}
+.flexbox.article,
+.flexbox.introBox {
+  background: var(--veryLightGray);
+}
+.flexbox.introBox {
+  margin-top: 50px;
+}
+.list {
+  grid-template-columns: repeat(4, 1fr);
+  display: grid;
+}
+.article > .header.big,
+.reasons > .header.big {
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+.article.element {
+  width: 20vw;
+  /* margin: 1vw; */
+  margin-top: 1vh;
+  margin-right: 1vw;
+  /* border-radius: 50px; */
+  background: var(--white);
+}
+.article.element > img {
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+  border-radius: 5px 5px 0px 00px;
+  margin: 0;
+}
+.article.element > * {
+  margin: 1rem;
+}
+.reason.element {
+  /* padding: 30px; */
+  margin-top: 30px;
+  margin-right: 30px;
+}
+.foot.background {
+  /* display: flex; */
+  display: grid;
+  background: var(--darkBlue);
+  height: 12rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+.foot.logos {
+  grid-column: 1;
+  display: grid;
+  grid-template-rows: 4em;
+  margin: auto;
+}
+
+.foot.options {
+  margin: auto;
+  /* margin-right: 50%; */
+  /* margin-top: 50px; */
+  grid-column: 2;
+  display: grid;
+  width: 50vw;
+  /* margin-left: 20%; */
+  grid-template-columns: repeat(2, 1fr);
+}
+.foot.options > .text {
+  color: var(--white);
+}
+.foot.invite {
+  margin: auto;
+  grid-column: 3;
+  text-align: right;
+}
+
+.toolbar.background {
+  position: fixed;
+  display: flex;
+  z-index: 2;
+  top: 0;
+  width: 100%;
+  height: 70px;
+  background: var(--white);
+}
+.toolbar > img {
+  grid-column: 1;
+  /* justify-self: center; */
+  margin: auto;
+  /* display: flex; */
+}
+.toolbar.menu {
+  display: flex;
+  justify-content: space-around;
+  grid-column: 2;
+}
+.toolbar > button {
+  grid-column: 3;
+  width: fit-content;
+  text-align: right;
+  justify-self: center;
+}
+.toolbar.table {
+  display: grid;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 100%;
 }
