--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   .toolbar.table > button.hamburgerMenu {
     display: block;
     width: 50px;
+    text-align: center;
   }
 
   .foot.background {
@@ -88,7 +89,7 @@
     margin-top: 70px;
     width: 100%;
     height: 100%;
-    pointer-events: none;
+    pointer-events: all;
     transition: 0.3s;
   }
   .mobile.menu {
@@ -123,7 +124,10 @@
   visibility: hidden;
   pointer-events: none !important;
 }
-
+* {
+  -webkit-tap-highlight-color: transparent;
+  user-select: none;
+}
 body {
   font-family: "Public Sans", sans-serif;
   font-size: 18px;
@@ -381,6 +385,9 @@ a:hover {
   display: flex;
   justify-content: space-around;
   grid-column: 2;
+}
+.toolbar.menu > a {
+  margin: auto;
 }
 .toolbar > button {
   grid-column: 3;
